# user-system

./: .gitignore  README  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 34e2c14ffc9d_add_user_tokens_expires_at_col_index.py  9bc22ba4dc43_add_user_tokens_table_updated_at_col.py  c9f1b7d96467_edit_user_tokens_table_column.py  e5d749d2f605_add_user_tokens_table_user_id_col_is_.py
app/: deps.py  main.py  security.py
app/config/: database.py  (+2 more)
backend/: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/versions/: 64ae474748a7_redesign_user_tokens_table.py  851bfbcfcdcf_add_user_tokens_table_expires_at_doc.py  bdc54353d9b4_create_users_table.py  fd0ff0dc851b_create_user_tokens_tables.py
backend/app/: deps.py  security.py
backend/app/config/: settings.py
backend/app/crud/: base.py  crud_user.py
backend/app/models/: user.py
backend/app/routes/: auth.py  base.py  user.py
backend/app/schemas/request/: auth.py
backend/app/schemas/utils/: jwt.py
backend/app/services/: auth_serv.py  email_serv.py
backend/app/templates/users/: forgot-password-reset.html
backend/tests/: utils.py
backend/tests/test_api/: conftest.py  test_base_api.py
backend/tests/test_api/test_user_api/: test_create_user_account.py  test_fetch_user.py
backend/tests/test_crud/: conftest.py  test_base_crud.py  test_user_crud.py  test_user_token_crud.py
backend/tests/test_model/: conftest.py  test_relationship.py  test_users.py
backend/tests/test_service/: conftest.py  test_auth_serv.py  test_email_serv.py
(+47 files in other folders)
