[tool.poetry]
name = "user-system"
version = "0.1.0"
description = ""
authors = ["weijay <weijay0804@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
